--- a/public/index.html
+++ b/public/index.html
@@ -85,176 +85,7 @@
           class="flex overflow-x-auto space-x-4 scrollbar-hide"
         >
           <!-- Profile Icon with Label -->
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Profile 1"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Vocal Local</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Profile 2"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Persona</p>
-          </div>
-          <!-- Repeat as needed for more profiles -->
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
 
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
-          <div class="flex-shrink-0 text-center">
-            <img
-              src="https://placehold.co/60x60"
-              alt="Fibonacci"
-              class="w-14 h-14 rounded-full border-4 border-green-500"
-            />
-            <p class="text-xs mt-1">Fibonacci</p>
-          </div>
           <!-- Add more Fibonacci profiles as shown previously -->
         </section>
 
@@ -456,6 +287,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="javaScript/user_data.js"></script>
     <script src="javaScript/local.js"></script>
+    <script src="javaScript/render.js"></script>
     <script src="javaScript/modal.js"></script>
   </body>
 </html>
