--- a/public/html/mycommunities.html
+++ b/public/html/mycommunities.html
@@ -88,7 +88,7 @@
         let item = document.createElement("div")
         item.className = "item" 
         item.innerHTML = `
-            <a href ="/community?${data._id}">
+            <a href ="/community?_id=${data._id}">
             <div>
                 <img src="/uploads/CommunityProfiles/${data.communityProfile}" alt="Fibonacci Logo">
             </div>
