--- a/public/index.html
+++ b/public/index.html
@@ -152,7 +152,7 @@
         </div>
         <!-- event card 2 -->
         <div
-          class="bg-green-200 rounded-lg shadow-lg p-4 border-t-4 border-green-500"
+          class="bg-green-200 rounded-lg shadow-lg p-4 border-t-4  "
         >
           <img
             src="https://placehold.co/400x200"
