--- a/public/forms/createevent.html
+++ b/public/forms/createevent.html
@@ -136,28 +136,28 @@
         </nav>
     </header>
 
-    <div class="container">
+    <form  action="/createEvent" method="post" enctype="multipart/form-data" class="container">
         <h1 class="createevent-text">Create Event</h1>
         <div class="banner" id="banner" onclick="document.getElementById('image-upload').click();">
             <span id="banner-text">Click to upload banner image</span>
             <img id="banner-preview" src="" alt="Banner Preview" style="display: none;">
         </div>
-        <input type="file" id="image-upload" accept="image/*" onchange="previewImage(event)">
+        <input type="file" id="image-upload" name="eventBanner" accept="image/*" onchange="previewImage(event)">
 
         <div class="form-group">
             <label for="event-name">Event Name:</label>
-            <input type="text" id="event-name" placeholder="Enter event name">
+            <input name="eventName" type="text" id="event-name" placeholder="Enter event name">
         </div>
         <div class="form-group">
             <label for="description">Description:</label>
-            <input type="text" id="description" placeholder="Enter description">
+            <input name="eventDescription" type="text" id="description" placeholder="Enter description">
         </div>
         <div class="form-group">
             <label for="location">Location:</label>
-            <input type="text" id="location" placeholder="Enter location">
+            <input name="eventLocation" type="text" id="location" placeholder="Enter location">
         </div>
-        <button class="create-btn">Create</button>
-    </div>
+        <button type="submit" class="create-btn">Create</button>
+    </form>
 
     <footer>
         <img src="oslava-logo.png" alt="Oslava Logo" style="width: 50px;">
