--- a/public/index.html
+++ b/public/index.html
@@ -103,145 +103,10 @@
       <h2 class="text-2xl font-semibold text-gray-700 mb-4">Events</h2>
       <div
         class="grid gap-4 grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
+
+        id="eventContainer"
       >
-        <!-- event card 1  -->
-        <div
-          class="bg-purple-200 rounded-lg shadow-lg p-4 border-t-4 border-purple-500"
-        >
-          <img
-            src="https://placehold.co/400x200"
-            alt="Event Image"
-            class="w-full h-40 object-cover rounded-lg"
-          />
 
-          <h3 class="text-lg font-semibold mt-4">Event Name</h3>
-          <p class="text-gray-600 text-sm mt-2">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s.
-          </p>
-
-          <div class="flex justify-between items-center mt-4">
-            <span class="text-sm text-gray-500">27 Sep 2024</span>
-            <span
-              class="bg-gray-200 text-sm text-red-500 px-3 py-1 rounded-full"
-              >&bull; live</span
-            >
-          </div>
-
-          <!-- Flex container for circular logo and button in the same line -->
-          <div class="flex items-center mt-4 space-x-4">
-            <!-- Circle div for logo -->
-            <div
-              class="w-12 h-12 bg-purple-500 rounded-full flex items-center justify-center"
-            >
-              <!-- Placeholder for community logo -->
-              <img
-                src="https://placehold.co/40x40"
-                alt="Community Logo"
-                class="w-10 h-10 rounded-full"
-              />
-            </div>
-            <!-- Button for Community Name -->
-            <button
-              class="bg-transparent text-black font-semibold py-2 px-1 rounded-lg text-lg"
-            >
-              Community Name
-            </button>
-          </div>
-        </div>
-        <!-- event card 2 -->
-        <div
-          class="bg-green-200 rounded-lg shadow-lg p-4 border-t-4  "
-        >
-          <img
-            src="https://placehold.co/400x200"
-            alt="Event Image"
-            class="w-full h-40 object-cover rounded-lg"
-          />
-
-          <h3 class="text-lg font-semibold mt-4">Event Name</h3>
-          <p class="text-gray-600 text-sm mt-2">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s.
-          </p>
-
-          <div class="flex justify-between items-center mt-4">
-            <span class="text-sm text-gray-500">27 Sep 2024</span>
-            <span
-              class="bg-gray-200 text-sm text-red-500 px-3 py-1 rounded-full"
-              >&bull; live</span
-            >
-          </div>
-
-          <!-- Flex container for circular logo and button in the same line -->
-          <div class="flex items-center mt-4 space-x-4">
-            <!-- Circle div for logo -->
-            <div
-              class="w-12 h-12 bg-green-500 rounded-full flex items-center justify-center"
-            >
-              <!-- Placeholder for community logo -->
-              <img
-                src="https://placehold.co/40x40"
-                alt="Community Logo"
-                class="w-10 h-10 rounded-full"
-              />
-            </div>
-            <!-- Button for Community Name -->
-            <button
-              class="bg-transparent text-black font-semibold py-2 px-1 rounded-lg text-lg"
-            >
-              Community Name
-            </button>
-          </div>
-        </div>
-        <!-- event card 3  -->
-        <div
-          class="bg-blue-200 rounded-lg shadow-lg p-4 border-t-4 border-blue-500"
-        >
-          <img
-            src="https://placehold.co/400x200"
-            alt="Event Image"
-            class="w-full h-40 object-cover rounded-lg"
-          />
-
-          <h3 class="text-lg font-semibold mt-4">Event Name</h3>
-          <p class="text-gray-600 text-sm mt-2">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s.
-          </p>
-
-          <div class="flex justify-between items-center mt-4">
-            <span class="text-sm text-gray-500">27 Sep 2024</span>
-            <span
-              class="bg-gray-200 text-sm px-3 py-1 rounded-full text-red-500"
-              >&bull; live</span
-            >
-          </div>
-
-          <!-- Flex container for circular logo and button in the same line -->
-          <div class="flex items-center mt-4 space-x-4">
-            <!-- Circle div for logo -->
-            <div
-              class="w-12 h-12 bg-blue-500 rounded-full flex items-center justify-center"
-            >
-              <!-- Placeholder for community logo -->
-              <img
-                src="https://placehold.co/40x40"
-                alt="Community Logo"
-                class="w-10 h-10 rounded-full"
-              />
-            </div>
-            <!-- Button for Community Name -->
-            <button
-              class="bg-transparent text-black font-semibold py-2 px-1 rounded-lg text-lg"
-            >
-              Community Name
-            </button>
-          </div>
-        </div>
         <!-- Additional cards would go here -->
       </div>
     </section>
