--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
 
   <body class="bg-gray-100">
     <!-- header section  -->
-    <header class="flex items-center justify-between px-8 py-4">
-      <div class="flex items-center space-x-3">
-        <h1 class="text-xl font-semibold">Oslava</h1>
+    <header class="flex items-center justify-between px-8 py-4 h-20">
+      <div class="flex items-center space-x-3 oslavaLogoHeader">
+          <img src="logo/oslavaLogoDark.png" >
       </div>
       <div class="flex space-x-6 text-sm font-medium">
         <a href="/createCommunity" class="hidden md:inline hover:underline" id="CreateCommunity">Create Community</a>
