--- a/public/index2.html
+++ b/public/index2.html
@@ -37,6 +37,7 @@
             height: 100%;
             width: 100%;
             object-fit: cover;
+            user-select: none;
         }
         header .signup {
             height: 35px;
