intro page is added and the authentication error solved

--- a/public/index2.html
+++ b/public/index2.html
@@ -120,8 +120,8 @@
                 <img src="logo/oslavaLogoDark.png" >
             </div>
             <div class="nevBtn">
-                <a href="#">login</a>
-                <a class="signup" href="#">signup</a>
+                <a href="/logIn">login</a>
+                <a class="signup" href="/signUp">signup</a>
             </div>
           </header>
           <section>
@@ -129,7 +129,7 @@
             <p>
                 em Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a ty
             </p>
-            <a href="#" class="start">GET STARTED</a>
+            <a href="/signUp" class="start">GET STARTED</a>
           </section>
     </div>
 </body>
