--- a/public/html/clubprofile.html
+++ b/public/html/clubprofile.html
@@ -575,37 +575,51 @@
             let liveEvents = document.getElementById("liveEvents");
 
             let eventcard = document.createElement("div");
+            if (element.communityId) {
+              eventcard.addEventListener("click", () => {
+                openThisEvent(element._id, element.communityId);
+              });
+            }
             eventcard.className =
               "card2 rounded-lg shadow-lg p-4 border-t-4 border-blue-500 m-2 w-60 h-50";
 
             eventcard.innerHTML = `
-<img src="/uploads/CommunityProfiles/${element.eventBanner}" alt="Event Image" class="w-full h-40 object-cover rounded-lg">
+                <img src="/uploads/CommunityProfiles/${element.eventBanner}" alt="Event Image" class="w-full h-40 object-cover rounded-lg">
 
-<h3 class="text-lg font-semibold mt-4">${element.eventName}</h3>
-<p class="text-gray-600 text-sm mt-2">${element.eventDescription}</p>
+                <h3 class="text-lg font-semibold mt-4">${element.eventName}</h3>
+                <p class="text-gray-600 text-sm mt-2">${element.eventDescription}</p>
 
-<div class="flex justify-between items-center mt-4">
-    <span class="text-sm text-gray-500">27 Sep 2024</span>
-    <span class="bg-gray-200 text-sm px-3 py-1 rounded-full text-red-500">&bull; live</span>
-</div>
+                <div class="flex justify-between items-center mt-4">
+                    <span class="text-sm text-gray-500">27 Sep 2024</span>
+                    <span class="bg-gray-200 text-sm px-3 py-1 rounded-full text-red-500">&bull; live</span>
+                </div>
 
-<!-- Flex container for circular logo and button in the same line -->
-<div class="flex items-center mt-4 space-x-4">
-    <!-- Circle div for logo -->
-    <div class="w-12 h-12 rounded-full flex items-center justify-center" style="background:#f2f2f2;">
-        <!-- Placeholder for community logo -->
-        <img src="/uploads/CommunityProfiles/${community.communityProfile}" alt="Community Logo" class="w-10 h-10 rounded-full">
-    </div>
-    <!-- Button for Community Name -->
-    <button class="bg-transparent text-black font-semibold py-2 px-1 rounded-lg text-lg">
-        Community Name
-    </button>
-</div>`;
+                <!-- Flex container for circular logo and button in the same line -->
+                <div class="flex items-center mt-4 space-x-4">
+                    <!-- Circle div for logo -->
+                    <div class="w-12 h-12 rounded-full flex items-center justify-center" style="background:#f2f2f2;">
+                        <!-- Placeholder for community logo -->
+                        <img src="/uploads/CommunityProfiles/${community.communityProfile}" alt="Community Logo" class="w-10 h-10 rounded-full">
+                    </div>
+                    <!-- Button for Community Name -->
+                    <button class="bg-transparent text-black font-semibold py-2 px-1 rounded-lg text-lg">
+                        Community Name
+                    </button>
+                </div>`;
 
             liveEvents.appendChild(eventcard);
           });
         }
       });
+
+
+
+      function openThisEvent(eventId, communityId) {
+        window.open(
+          `/renderThisEvent?_id=${eventId}&communityId=${communityId}`,
+          "_self"
+        );
+      }
     </script>
   </body>
 </html>
