--- a/public/html/eventdashboard.html
+++ b/public/html/eventdashboard.html
@@ -176,6 +176,31 @@
             display: flex;
             align-items: center;
         }
+        #eventName{
+            font-size: 3rem;
+            letter-spacing: -.1rem;
+            text-transform: capitalize;
+            font-weight: 600;
+        }
+        .actionButtons{
+            display: flex;
+            flex-direction: row;
+            margin-left: auto;
+            width: 100%;
+            margin-right: 4rem;
+            justify-content: end;
+        }
+        .actionButtons button{
+            background: #000;
+            padding: .4rem 2rem;
+            border-radius: 2rem;
+            margin-left: .2rem;
+            color: #fff;
+        }
+        .actionButtons button:hover {
+            box-shadow:  0 0 1rem 0 #61616179;
+            background-color: #3b3b3b;
+        }
     </style>
 </head>
 <body>
@@ -198,7 +223,12 @@
             <p id="eventDescription">Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text since the 1500s, when an unknown printer took a.</p>
         </div>
 
-        <div class="stats">
+        <div class="actionButtons">
+            <button type="button">apply as volunteer</button>
+            <button type="button">apply</button>
+        </div>
+
+        <div id="stats" class="stats">
             <div>
                 <p>Application</p>
                 <span>104</span>
@@ -213,7 +243,7 @@
             </div>
         </div>
 
-        <div class="applications">
+        <div id="applications" class="applications">
             <h3>Application</h3>
             <div class="application-item">
                 <div  class="applicant-info"><img src="https://via.placeholder.com/40" alt="Applicant">
@@ -258,10 +288,16 @@
         let eventBanner = document.getElementById("eventBanner")
         
         socket.emit("give-event-data")
-        socket.on("take-this-event-data" , (event , community)=>{
+        socket.on("take-this-event-data" , (event , community , owner)=>{
             eventBanner.src = "/uploads/CommunityProfiles/"+event.eventBanner
             eventName.textContent = event.eventName
             eventDescription.textContent = event.eventDescription
+            if (owner==true) {
+                
+            }else{
+                applications.remove()
+                stats.remove()
+            }
         })
     </script>
 </body>
