--- a/public/html/clubprofile.html
+++ b/public/html/clubprofile.html
@@ -239,144 +239,7 @@
       <img src="https://via.placeholder.com/150" alt="Community Logo" />
       <div class="profile-info" id="profile-info"></div>
     </section>
-    <!-- Updates Section -->
-    <section class="section section1">
-      <h2>Updates</h2>
-      <div class="content">
-        <div
-          class="card1 rounded-lg shadow-lg p-4 border-t-4 border-blue-500 m-2 w-60 h-50"
-        >
-          <img
-            src="https://placehold.co/400x200"
-            alt="Event Image"
-            class="w-full h-40 object-cover rounded-lg"
-          />
 
-          <h3 class="text-lg font-semibold mt-4">Event Name</h3>
-          <p class="text-gray-600 text-sm mt-2">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry.
-          </p>
-
-          <div class="flex justify-between items-center mt-4">
-            <span class="text-sm text-gray-500">27 Sep 2024</span>
-            <span
-              class="bg-gray-200 text-sm px-3 py-1 rounded-full text-red-500"
-              >&bull; live</span
-            >
-          </div>
-
-          <!-- Flex container for circular logo and button in the same line -->
-          <div class="flex items-center mt-4 space-x-4">
-            <!-- Circle div for logo -->
-            <div
-              class="w-12 h-12 bg-blue-500 rounded-full flex items-center justify-center"
-            >
-              <!-- Placeholder for community logo -->
-              <img
-                src="https://placehold.co/40x40"
-                alt="Community Logo"
-                class="w-10 h-10 rounded-full"
-              />
-            </div>
-            <!-- Button for Community Name -->
-            <button
-              class="bg-transparent text-black font-semibold py-2 px-1 rounded-lg text-lg"
-            >
-              Community Name
-            </button>
-          </div>
-        </div>
-        <div
-          class="card2 rounded-lg shadow-lg p-4 border-t-4 border-blue-500 m-2 w-60 h-50"
-        >
-          <img
-            src="https://placehold.co/400x200"
-            alt="Event Image"
-            class="w-full h-40 object-cover rounded-lg"
-          />
-
-          <h3 class="text-lg font-semibold mt-4">Event Name</h3>
-          <p class="text-gray-600 text-sm mt-2">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry.
-          </p>
-
-          <div class="flex justify-between items-center mt-4">
-            <span class="text-sm text-gray-500">27 Sep 2024</span>
-            <span
-              class="bg-gray-200 text-sm px-3 py-1 rounded-full text-red-500"
-              >&bull; live</span
-            >
-          </div>
-
-          <!-- Flex container for circular logo and button in the same line -->
-          <div class="flex items-center mt-4 space-x-4">
-            <!-- Circle div for logo -->
-            <div
-              class="w-12 h-12 bg-blue-500 rounded-full flex items-center justify-center"
-            >
-              <!-- Placeholder for community logo -->
-              <img
-                src="https://placehold.co/40x40"
-                alt="Community Logo"
-                class="w-10 h-10 rounded-full"
-              />
-            </div>
-            <!-- Button for Community Name -->
-            <button
-              class="bg-transparent text-black font-semibold py-2 px-1 rounded-lg text-lg"
-            >
-              Community Name
-            </button>
-          </div>
-        </div>
-        <div
-          class="card3 rounded-lg shadow-lg p-4 border-t-4 border-blue-500 m-2 w-60 h-50"
-        >
-          <img
-            src="https://placehold.co/400x200"
-            alt="Event Image"
-            class="w-full h-40 object-cover rounded-lg"
-          />
-
-          <h3 class="text-lg font-semibold mt-4">Event Name</h3>
-          <p class="text-gray-600 text-sm mt-2">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry.
-          </p>
-
-          <div class="flex justify-between items-center mt-4">
-            <span class="text-sm text-gray-500">27 Sep 2024</span>
-            <span
-              class="bg-gray-200 text-sm px-3 py-1 rounded-full text-red-500"
-              >&bull; live</span
-            >
-          </div>
-
-          <!-- Flex container for circular logo and button in the same line -->
-          <div class="flex items-center mt-4 space-x-4">
-            <!-- Circle div for logo -->
-            <div
-              class="w-12 h-12 bg-blue-500 rounded-full flex items-center justify-center"
-            >
-              <!-- Placeholder for community logo -->
-              <img
-                src="https://placehold.co/40x40"
-                alt="Community Logo"
-                class="w-10 h-10 rounded-full"
-              />
-            </div>
-            <!-- Button for Community Name -->
-            <button
-              class="bg-transparent text-black font-semibold py-2 px-1 rounded-lg text-lg"
-            >
-              Community Name
-            </button>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Live Events Section -->
     <section class="section section2">
@@ -575,13 +438,14 @@
             let liveEvents = document.getElementById("liveEvents");
 
             let eventcard = document.createElement("div");
+            eventcard.style = "background : #f1f1f1; display:flex ; flex-direction: column;"
             if (element.communityId) {
               eventcard.addEventListener("click", () => {
                 openThisEvent(element._id, element.communityId);
               });
             }
             eventcard.className =
-              "card2 rounded-lg shadow-lg p-4 border-t-4 border-blue-500 m-2 w-60 h-50";
+              "card2 rounded-lg shadow-lg p-4 border-t-4  m-2 w-60 h-50";
 
             eventcard.innerHTML = `
                 <img src="/uploads/CommunityProfiles/${element.eventBanner}" alt="Event Image" class="w-full h-40 object-cover rounded-lg">
