button function is completed

--- a/public/index2.html
+++ b/public/index2.html
@@ -127,8 +127,7 @@
           <section>
             <h1>Create Your Own Community</h1>
             <p>
-                em Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a ty
-            </p>
+                Oslava is an event management platform that connects organizers, students, and volunteers, streamlining event discovery, registration, and engagement. It offers tools for creating, managing, and participating in events with ease.            </p>
             <a href="/signUp" class="start">GET STARTED</a>
           </section>
     </div>
